Init migration to jdk17 and spring boot 3.1.0