@@ -2,10 +2,10 @@ package com.easyms.rest.ms.config;
 
 
 import com.easyms.rest.ms.error.CommonExceptionHandler;
-import org.apache.http.client.HttpClient;
-import org.apache.http.impl.client.cache.CacheConfig;
-import org.apache.http.impl.client.cache.CachingHttpClients;
-import org.apache.http.message.BasicHeader;
+import org.apache.hc.client5.http.classic.HttpClient;
+import org.apache.hc.client5.http.impl.cache.CacheConfig;
+import org.apache.hc.client5.http.impl.cache.CachingHttpClients;
+import org.apache.hc.core5.http.message.BasicHeader;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Import;
@@ -14,14 +14,12 @@ import org.springframework.http.MediaType;
 import org.springframework.http.client.BufferingClientHttpRequestFactory;
 import org.springframework.http.client.HttpComponentsClientHttpRequestFactory;
 
-import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @Import({JacksonConfig.class, CommonExceptionHandler.class})
 public class RestConfiguration {
 
-    private static final int DEFAULT_SERVICE_READ_TIMEOUT = 30000;
     private static final int DEFAULT_SERVICE_CONNECT_TIMEOUT = 50000;
     private static final int HTTP_CACHE_MAX_ENTRIES = 1000;
     private static final int HTTP_CACHE_MAX_SIZE = 8192;
@@ -34,9 +32,8 @@ public class RestConfiguration {
 
     @Bean
     public HttpClient getHttpClient(CacheConfig cacheConfig) {
-        BasicHeader basicHeader = new BasicHeader("Content-Type", MediaType.APPLICATION_JSON_UTF8_VALUE);
-        final Collection<BasicHeader> defaultHeaders = Collections.singletonList(basicHeader);
-        return CachingHttpClients.custom().setCacheConfig(cacheConfig).setDefaultHeaders(defaultHeaders).build();
+        BasicHeader basicHeader = new BasicHeader("Content-Type", MediaType.APPLICATION_JSON_VALUE);
+        return CachingHttpClients.custom().setCacheConfig(cacheConfig).setDefaultHeaders(List.of(basicHeader)).build();
     }
 
     @Bean
@@ -48,9 +45,9 @@ public class RestConfiguration {
     @Primary
     public HttpComponentsClientHttpRequestFactory provideHttpComponentsClientHttpRequestFactory(HttpClient httpClient) {
         HttpComponentsClientHttpRequestFactory factory = new HttpComponentsClientHttpRequestFactory(httpClient);
-        factory.setReadTimeout(DEFAULT_SERVICE_READ_TIMEOUT);
         factory.setConnectTimeout(DEFAULT_SERVICE_CONNECT_TIMEOUT);
         return factory;
     }
 
 }
+
