@@ -23,7 +23,7 @@ public class FeignInterceptor implements RequestInterceptor {
         if (!template.headers().containsKey(AUTHORIZATION_HEADER)) {
             Authentication auth = SecurityContextHolder.getContext().getAuthentication();
             if (Objects.nonNull(auth)) {
-                template.header(AUTHORIZATION_HEADER, String.format("%s %s", BEARER_TOKEN_TYPE, generateToken(auth)));
+                template.header(AUTHORIZATION_HEADER, "%s %s".formatted(BEARER_TOKEN_TYPE, generateToken(auth)));
             }
         }
     }
